# FloristaMel

./: .env.example  .gitignore  Cargo.toml
src/: api.rs  embeds.rs  main.rs  response_structs.rs
src/commands/: mobs.rs
